# EldenRingSpellRemapper

./: .eslintcache  .gitignore  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
scripts/: generate_all_spells.ts  post_build_copy_folder.ts
src/: AddSpellPage.scss  AddSpellPage.tsx  App.scss  App.tsx  PaddleMapper.scss  PaddleMapper.tsx  PaddleMapperContextMenu.scss  PaddleMapperContextMenu.tsx  SettingsPage.scss  SettingsPage.tsx  SpellEntryCard.tsx  SpellEntryCardContextMenu.scss  SpellEntryCardContextMenu.tsx  SpellEntrycard.scss  SpellMapPage.scss  SpellMapPage.tsx  Spellbar.scss  Spellbar.tsx
src-cpp/: ButtonStringUtils.cpp  ButtonStringUtils.h  EldenChordConfig.cpp  EldenChordConfig.h  EldenChordOverrider.cpp  EldenChordOverrider.h  EldenOverrideHandler.cpp  EldenOverrideHandler.h  cpp.hint  framework.h  src-cpp-elden-remapper.cpp  src-cpp-elden-remapper.h  src-cpp-elden-remapper.vcxproj  src-cpp-elden-remapper.vcxproj.filters
src-cpp-manual-test/EldenRemapperManualTesting/: EldenRemapperManualTesting.cpp  EldenRemapperManualTesting.vcxproj  EldenRemapperManualTesting.vcxproj.filters  src-cpp-elden-remapper.h
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/common/: Buttons.ts  Buttons.tsx  DraggableCollisionWithThrashArea.ts  OverrideAPI.ts  OverrideAPI.tsx  RemapConfig.ts  settingsCheck.ts
src/components/: ButtonMappingPair.scss  ButtonMappingPair.tsx  ButtonModifierMappingPair.tsx  ButtonPickerContextMenu.scss  ButtonPickerContextMenu.tsx  ConfigErrorDisplay.scss  ConfigErrorDisplay.tsx  Spellbar.scss  (+12 more)
(+6 files in other folders)
